Updated header, fixed cumulative layout shift by giving images css reset, commented out quote carousel,updated navigation, and now, in mobile, clicking a link will make the navigation go away, updated home to have latest project as the spotlight card

--- a/src/app.scss
+++ b/src/app.scss
@@ -71,3 +71,8 @@ h3, h4 {
   font-weight: 500;
   text-transform: uppercase;
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+}
